[tool.poetry]
name = "python-packages"
version = "0.1.0"
description = ""
authors = ["Sungsoo <onair0817@gmail.com>"]
readme = "README.md"
packages = [{include = "python_packages"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.88.0"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
