[tool.poetry]
name = "python-packages"
version = "0.1.0"
description = ""
authors = ["Sungsoo <onair0817@gmail.com>"]
readme = "README.md"
packages = [{include = "python_packages"}]

[tool.poetry.dependencies]
python = "^3.9"
pre-commit = "^2.20.0"
flake8 = "^6.0.0"
black = "^22.12.0"
isort = "^5.11.3"
autoflake = "^2.0.0"
mypy = "^0.991"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
